fixed spacing issues on map page

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -6,6 +6,7 @@
 
   display: flex;
   flex-wrap: wrap;
+  justify-content:space-evenly;
   flex-grow: 1;
   padding: 0 10px 10px 10px;
   width: 60%;
