--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -1,6 +1,6 @@
 #map {
   height: 100vh;
-  width: 40%;
+  width: 50%;
   position: sticky;
   top: 0;
   flex-grow:1;
